Convert to JDK 8 code